--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
-		"typescript": "^5.5.2",
+		"@cloudflare/workers-types": "^4.20250909.0",
+		"@types/node": "^24.3.1",
+		"typescript": "^5.9.2",
 		"vitest": "~3.2.0",
 		"wrangler": "^4.34.0"
+	},
+	"dependencies": {
+		"html-to-text": "^9.0.5",
+		"postal-mime": "^2.4.4"
 	}
 }
